cncProd/force-app/main/default/objects/Courtesy_Vehicle__c/Courtesy_Vehicle__c.object-meta.xml
<CustomObject>
    <description>Custom Object for Courtesy Vehicles (Test Drive, Loan, Showroom)</description>
    <label>Courtesy Vehicle</label>
    <nameField>
        <label>Courtesy Vehicle Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Courtesy Vehicles</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>