cncProd/force-app/main/default/objects/Courtesy_Vehicle__c/fields/Autoline_Sales_Order__c.field-meta.xml
<CustomField>
    <fullName>Autoline_Sales_Order__c</fullName>
    <label>Autoline Sales Order</label>
    <length>50</length>
    <type>Text</type>
</CustomField>