cncProd/force-app/main/default/objects/Courtesy_Vehicle__c/fields/Branch_Code__c.field-meta.xml
<CustomField>
    <fullName>Branch_Code__c</fullName>
    <label>Branch Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CCK</fullName>
            </value>
            <value>
                <fullName>CCA</fullName>
            </value>
            <value>
                <fullName>CCF</fullName>
            </value>
            <value>
                <fullName>CCI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>