cncProd/force-app/main/default/objects/Courtesy_Vehicle__c/fields/Trim__c.field-meta.xml
<CustomField>
    <fullName>Trim__c</fullName>
    <label>Trim</label>
    <length>200</length>
    <type>Text</type>
</CustomField>