cncProd/force-app/main/default/objects/Courtesy_Vehicle__c/fields/Variant__c.field-meta.xml
<CustomField>
    <fullName>Variant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Variant</label>
    <referenceTo>Variant__c</referenceTo>
    <relationshipLabel>Courtesy Vehicles</relationshipLabel>
    <relationshipName>Courtesy_Vehicles</relationshipName>
    <type>Lookup</type>
</CustomField>