cncProd/force-app/main/default/objects/Courtesy_Vehicle__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Model__c</columns>
    <columns>Variant__c</columns>
    <columns>Colour__c</columns>
    <columns>Trim__c</columns>
    <columns>Comm_No__c</columns>
    <columns>Registration_No__c</columns>
    <columns>Registration_Date__c</columns>
    <columns>Registration_Number__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>